--- a/src/styles/style-nav.css
+++ b/src/styles/style-nav.css
@@ -38,7 +38,7 @@
 }
 
 .search__button {
-  background-color: var(--primary);
+  background-color: #6220fb;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -52,9 +52,35 @@
   align-items: center;
 }
 
-.iconos i {
-  font-size: 1.5rem;
-  margin-right: 10px;
+.btn {
+  display: grid;
+  place-items: center;
+  background: #e3edf7;
+  padding: 1.4em;
+  border-radius: 10px;
+  box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
+    -6px -6px 10px -1px rgba(255, 255, 255, 0.7);
+  border: 1px solid rgba(0, 0, 0, 0);
+  cursor: pointer;
+  transition: transform 0.5s;
+}
+
+.btn:hover {
+  box-shadow: inset 4px 4px 6px -1px rgba(0, 0, 0, 0.2),
+    inset -4px -4px 6px -1px rgba(255, 255, 255, 0.7),
+    -0.5px -0.5px 0px rgba(255, 255, 255, 1),
+    0.5px 0.5px 0px rgba(0, 0, 0, 0.15), 0px 12px 10px -10px rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transform: translateY(0.5em);
+}
+
+.btn .ico {
+  transition: transform 0.5s;
+}
+
+.btn:hover .ico {
+  transform: scale(0.9);
+  fill: #333333;
 }
 
 .ingresar {
